dataset1235/2025-2/610742602/users/3642541582/executions/677928262_3921830315.log
== SUBMISSION (2025-08-28 14:14:42)
-- CODE: 
a= float(input("digite a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
c= b+b(34/100)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 14:16:16)
-- CODE: 
a= float(input("qual a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 14:16:17)
-- CODE: 
a= float(input("qual a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 14:17:13)
-- CODE: 
a= float(input("qual a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
c= b+b*(34/100)
print(round(c,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
qual a quantidade de litros abastecidos?: 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
qual a quantidade de litros abastecidos?: 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
qual a quantidade de litros abastecidos?: 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
qual a quantidade de litros abastecidos?: 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
qual a quantidade de litros abastecidos?: 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
qual a quantidade de litros abastecidos?: 230.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 14:15:12)
-- CODE: 
a= float(input("qual a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
c= b+b(34/100)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 14:14:22)
-- CODE: 
a= float(input("digite a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
c= b+b(34/100)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 14:14:41)
-- CODE: 
a= float(input("digite a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
c= b+b(34/100)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 14:17:14)
-- CODE: 
a= float(input("qual a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
c= b+b*(34/100)
print(round(c,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
qual a quantidade de litros abastecidos?: 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
qual a quantidade de litros abastecidos?: 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
qual a quantidade de litros abastecidos?: 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
qual a quantidade de litros abastecidos?: 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
qual a quantidade de litros abastecidos?: 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
qual a quantidade de litros abastecidos?: 230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 14:14:22)
-- CODE: 
a= float(input("digite a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
c= b+b(34/100)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 14:15:11)
-- CODE: 
a= float(input("qual a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
c= b+b(34/100)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c= b+b(34/100)
         ^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
